--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                 <a class="item clickable-item" href="graphic-design.html">
                     <div class="item-content-wrapper ">
-                        <div class="vl "></div>
+                        <div class="vl"></div>
                         <div class="item-number ">
                             <h1>3</h1>
                         </div>
@@ -141,8 +141,8 @@
     </section>
     </div>
     <div class="footer ">
-        <p class="footer-left "> <a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
-        <p class="footer-right ">Designed and coded by me</p>
+        <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
+  </div><p class="footer-right ">Designed and coded by me</p>
 
     </div>
 
