--- a/pet.html
+++ b/pet.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body id="main-scrollbar">
     <section>
         <div class="header">
             <div class="logo">
@@ -20,11 +20,12 @@
                 <hr class="header-divider">
             </div>
         </div>
+
         <div class="page-content">
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
-                        <a href="https://www.xiaoxuanwu.com/"><img src="Images/Arrow 1.png"></a>
+                        <a href="https://xiaoxuan.work/"><img src="Images/Arrow 1.png"></a>
                     </div>
 
                     <div class="project-title-wrapper">
@@ -145,26 +146,25 @@
                     </div>
                 </div>
 
-
-
             </div>
-
-
-            <div class="project-end">
-                <hr class="project-divider">
-                <div class="back-logo">
-                    <a href="https://www.xiaoxuan.work/"><img src="Images/Arrow 1.png">
-                        <p class="back-text">Back to all projects</p>
-                    </a>
-                </div>
-            </div>
-
         </div>
-        <hr>
+        <div class="project-end">
+            <hr class="project-divider">
+            <div class="back-group">
+                <a href="https://www.xiaoxuan.work/"><img src="Images/Arrow 1.png">
+                    <p class="back-text">Back to all projects</p>
+                </a>
+            </div>
+        </div>
+
+
+
         <div class="footer">
-            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></h4>
-            <h4 class="footer-right">Designed and coded by me</h4>
+            <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
+            </div>  <p class="footer-right ">Designed and coded by me</p>
+
         </div>
+  
     </section>
 
 </body>
