--- a/wunderkind.html
+++ b/wunderkind.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>graphic design</title>
+    <title>Wunderkind</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,8 +75,8 @@
 
 
         <div class="footer ">
-            <a></a> <p class="footer-left ">resume</p></a>
-            <p class="footer-right ">Designed and coded by me</p>
+            <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
+            </div>    <p class="footer-right ">Designed and coded by me</p>
 
         </div>
 
