--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <section class="introduction ">
         <h2>
-            Xiaoxuan Wu is a product designer based in New York. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
+            Xiaoxuan Wu is a product designer based in New York City. Currently designing at <i>Wunderkind</i>, a digital marketing company.</h2>
     </section>
     </div>
     <div class="footer ">
