--- a/graphic-design.html
+++ b/graphic-design.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <section>
+<body id="main-scrollbar">
+    <section >
         <div class="header">
             <div class="logo">
                 <img src="/Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
@@ -61,11 +62,10 @@
             </div>
 
         </div>
-        <hr>
         <div class="footer">
-            <h4 class="footer-left"><a style="margin-right: 30px;">about</a> <a>resume</a></h4>
-            <h4 class="footer-right">Designed and coded by me</h4>
-        </div>
+            <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
+            </div>  <p class="footer-right ">Designed and coded by me</p>
+
         </div>
     </section>
 </body>
