--- a/med-school.html
+++ b/med-school.html
@@ -21,7 +21,7 @@
     <section>
         <div class="header">
             <div class="logo">
-                <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+                <img src="Images/Logo(1).png" id="logo" href="xiaoxuan.work" alt="Xiaoxuan Wu">
                 <hr class="header-divider">
             </div>
         </div>
@@ -31,7 +31,7 @@
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
-                        <a href="https://www.xiaoxuanwu.work"><img src="Images/Arrow 1.png"></a>
+                        <a href="xiaoxuan.work"><img src="Images/Arrow 1.png"></a>
                     </div>
 
                     <div class="project-title-wrapper">
@@ -43,8 +43,12 @@
             </div>
 
             <div class="page-body">
-           
+                <p>One interesting thing we found during our interview was that Comparing to digital devices, student stick to paper as their main medium during patient visits.  sometimes they would use a piece of scrap paper to write down patient information and they lose those paper. As a result, making up faulty patient information when entering into the system
+                    Rather than introducing a new medium such as a new app on their phone, we wanted to stick to what the students are used to the most- pen and paper. 
+                    We decided to design a notebook specifically for these busy students</p>
                 <div class="image-wrapper">
+
+                      
                     <video class="lazyload" width="100%" autoplay muted loop>
                         <source data-src="/Images/Med school dashboard/flipbook.mp4"src="/Images/Med school dashboard/flipbook.mp4" type="video/mp4">    </video>
                 </div>
