--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="header">
         <div class="logo">
-            <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
+            <img src="Images/Logo(1).png" id="logo" href="xiaoxuan.work" alt="Xiaoxuan Wu">
             <hr class="header-divider">
         </div>
     </div>
@@ -87,7 +87,7 @@
                     </div>
                 </a>
 
-                <a class="item clickable-item"  href="wunderkind.html">
+                <a class="item clickable-item"  href="med-school.html">
                     <div class="item-content-wrapper">
                         <div class="vl "></div>
                         <div class="item-number ">
