--- a/wunderkind.html
+++ b/wunderkind.html
@@ -21,8 +21,7 @@
     <section>
         <div class="header">
             <div class="logo">
-                <img src="Images/Logo(1).png" id="logo" href="https://www.xiaoxuanwu.com/" alt="Xiaoxuan Wu">
-                <hr class="header-divider">
+                <a href="https://xiaoxuan.work/" ><img src="Images/Logo(1).png" id="logo" alt="Xiaoxuan Wu"></a>                <hr class="header-divider">
             </div>
         </div>
 
