--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </section>
     </div>
     <div class="footer ">
-        <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
+        <div class="footer-left"> <p class="highlight-text"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
   </div><p class="footer-right ">Designed and coded by me</p>
 
     </div>
