--- a/med-school.html
+++ b/med-school.html
@@ -30,7 +30,7 @@
             <div class="page-title-wrapper">
                 <div class="icon-title">
                     <div class="back-logo">
-                        <a href="xiaoxuan.work"><img src="Images/Arrow 1.png"></a>
+                        <a href="https://xiaoxuan.work/"><img src="Images/Arrow 1.png"></a>
                     </div>
 
                     <div class="project-title-wrapper">
