--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2 >Project</h2>
                 </div>
 
-                <a class="item clickable-item rellax" data-rellax-speed="-10" href="pet.html ">
+                <a class="item clickable-item rellax" data-rellax-speed="-10" href="xiaoxuan.work/pet">
                     <div class="item-content-wrapper ">
                         <div class="vl "></div>
 
