--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </a>
 
-                <a class="item clickable-item rellax" data-rellax-speed="-10" href="wunderkind.html">
+                <a class="item clickable-item rellax" data-rellax-speed="-10" href="xiaoxuan.work/wunderkind">
                     <div class="item-content-wrapper ">
                         <div class="vl "></div>
                         <div class="item-number ">
@@ -87,7 +87,7 @@
                     </div>
                 </a>
 
-                <a class="item clickable-item"  href="med-school.html">
+                <a class="item clickable-item"  href="xiaoxuan.work/med-school">
                     <div class="item-content-wrapper">
                         <div class="vl "></div>
                         <div class="item-number ">
@@ -115,7 +115,7 @@
                     </div>
                 </a>
 
-                <a class="item clickable-item" href="graphic-design.html">
+                <a class="item clickable-item" href="xiaoxuan.work/graphic-design">
                     <div class="item-content-wrapper ">
                         <div class="vl"></div>
                         <div class="item-number ">
