--- a/med-school.html
+++ b/med-school.html
@@ -1,76 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Wunderkind</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/07bc066b74.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css" />
+    <script
+      src="https://kit.fontawesome.com/07bc066b74.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
+  </head>
 
-</head>
-
-
-
-<body id="main-scrollbar">
-
-
+  <body id="main-scrollbar">
     <section>
-        <div class="header">
-            <div class="logo">
-                <a href="https://xiaoxuan.work/" ><img src="Images/Logo(1).png" id="logo" alt="Xiaoxuan Wu"></a>                <hr class="header-divider">
-            </div>
+      <div class="header">
+        <div class="logo">
+          <a href="https://xiaoxuan.work/"
+            ><img src="Images/Logo(1).png" id="logo" alt="Xiaoxuan Wu"
+          /></a>
+          <hr class="header-divider" />
         </div>
+      </div>
 
-        <div class="page-content">
-
-            <div class="page-title-wrapper">
-                <div class="icon-title">
-                    <div class="back-logo">
-                        <a href="https://xiaoxuan.work/"><img src="Images/Arrow 1.png"></a>
-                    </div>
-
-                    <div class="project-title-wrapper">
-                        <p class="project-subhead">CX, Marketing Design</p>
-                        <h2 class="project-heading">Wunderkind</h2>
-                    </div>
-                </div>
-                <hr>
+      <div class="page-content">
+        <div class="page-title-wrapper">
+          <div class="icon-title">
+            <div class="back-logo">
+              <a href="https://xiaoxuan.work/"
+                ><img src="Images/Arrow 1.png"
+              /></a>
             </div>
 
-            <div class="page-body">
-                <p>One interesting thing we found during our interview was that Comparing to digital devices, student stick to paper as their main medium during patient visits.  sometimes they would use a piece of scrap paper to write down patient information and they lose those paper. As a result, making up faulty patient information when entering into the system
-                    Rather than introducing a new medium such as a new app on their phone, we wanted to stick to what the students are used to the most- pen and paper. 
-                    We decided to design a notebook specifically for these busy students</p>
-                <div class="image-wrapper">
-
-                      
-                    <video class="lazyload" width="100%" autoplay muted loop>
-                        <source data-src="/Images/Med school dashboard/flipbook.mp4"src="/Images/Med school dashboard/flipbook.mp4" type="video/mp4">    </video>
-                </div>
-
+            <div class="project-title-wrapper">
+              <p class="project-subhead">System Design</p>
+              <h2 class="project-heading">
+                Oasis - A Student Portal for Medical School
+              </h2>
             </div>
+          </div>
+          <hr />
         </div>
 
-        <div class="project-end">
-            <hr class="project-divider">
-            <div class="back-group">
-                <a href="https://www.xiaoxuan.work/"><img src="Images/Arrow 1.png">
-                    <p class="back-text">Back to all projects</p>
-                </a>
-            </div>
+        <div class="page-body">
+          <div>
+            <p class="page-paragraph">
+              At the WashU Medical School, students are required to document
+              their patient encounters through the student portal. While the
+              data-entry task is supposed to be simple, the faculty has found
+              that a majority of students find it overburdening, resulting in
+              inaccurate reports.
+            </p>
+            <p class="page-paragraph">
+              Stakeholder wishes to create a digital experience that encourages
+              responsible data entry for very busy medical students
+            </p>
+          </div>
+          <h3>
+            Why do medical schools require students to enter patient log in the
+            first place?
+          </h4>
+          <p class="a page-paragraph">
+            Documentation is an essential and important feature of patient care
+            and learning how and what to document is an important part of
+            medical education. Keeping this log becomes a student training
+            exercise in documentation. All of these features of documentation
+            -<b>
+              seriousness, accuracy, conscientiousness and honesty </b
+            >- are measures of professionalism. ––– TAMU Medical School
+          </p>
+          <h3>
+            Do the medical students understand the rational behind this mandatory documentation? 
+          </h3>
+          <p class="a page-paragraph">“<b>Annoying busy work.</b> It’s purely administrative, and just for attendance purpose. The whole process could potentially just be automated through the EMR system.”</p>
+          <p>
+            One interesting we found during our interview was that
+            Comparing to digital devices, student stick to paper as their main
+            medium during patient visits. sometimes they would use a piece of
+            scrap paper to write down patient information and they lose those
+            paper. As a result, making up faulty patient information when
+            entering into the system Rather than introducing a new medium such
+            as a new app on their phone, we wanted to stick to what the students
+            are used to the most- pen and paper. We decided to design a notebook
+            specifically for these busy students
+          </p>
+          <div class="image-wrapper">
+            <video class="lazyload" width="100%" autoplay muted loop>
+              <source
+                data-src="/Images/Med school dashboard/flipbook.mp4"
+                src="/Images/Med school dashboard/flipbook.mp4"
+                type="video/mp4"
+              />
+            </video>
+          </div>
         </div>
+      </div>
 
-
-
-        <div class="footer ">
-            <div class="footer-left"> <p class="resume"><a href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing">resume</a></p>
-            </div>    <p class="footer-right ">Designed and coded by me</p>
-
+      <div class="project-end">
+        <hr class="project-divider" />
+        <div class="back-group">
+          <a href="https://www.xiaoxuan.work/"
+            ><img src="Images/Arrow 1.png" />
+            <p class="back-text">Back to all projects</p>
+          </a>
         </div>
+      </div>
 
+      <div class="footer">
+        <div class="footer-left">
+          <p class="resume">
+            <a
+              href="https://drive.google.com/file/d/1j7_9QTrjAnNEupaooCcKwIvz0lyYnQ09/view?usp=sharing"
+              >resume</a
+            >
+          </p>
+        </div>
+        <p class="footer-right">Designed and coded by me</p>
+      </div>
     </section>
-</body>
+  </body>
+</html>
